Fixed new message spacing

--- a/XposeRAW.theme.css
+++ b/XposeRAW.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"XposeRAW","description":"Custom theme","author":"PseudoResonance","version":"2.7.0"}*//
+//META{"name":"XposeRAW","description":"Custom theme","author":"PseudoResonance","version":"2.7.1"}*//
 
 :root {
 	--background-screen-cover: 0, 0, 0; /* Color of screen over background */
@@ -7,7 +7,7 @@
 }
 
 body {
-	--version: "v2.7.0";
+	--version: "v2.7.1";
 	--message-spacing:1.0625rem;
 	--header-height:1.375rem;
 }
@@ -451,12 +451,8 @@ body {
 	display:none;
 }
 
-.messages-3amgkR .divider-3_HH5L:not(.isUnread-3Ef-o9) + .groupStart-23k01U {
+.messages-3amgkR .divider-3_HH5L + .groupStart-23k01U {
 	margin-top:calc(var(--message-spacing) * 0.5);
-}
-
-.messages-3amgkR .divider-3_HH5L.isUnread-3Ef-o9 + .groupStart-23k01U {
-	margin-top:var(--message-spacing);
 }
 
 /* Spacing between messages within a group */
@@ -498,6 +494,10 @@ body {
 .messages-3amgkR .divider-3_HH5L span::before, .messages-3amgkR .divider-3_HH5L span::after {
 	content:'';
 	flex:1;
+}
+
+.messages-3amgkR .divider-3_HH5L.isUnread-3Ef-o9 span:nth-child(2) {
+	display:none;
 }
 
 /* New message color */
